@@ -3,19 +3,25 @@
 #' Perform a 2D kernel density estimatation using kde2d and display the results with contours. This can be 
 #' useful for dealing with overplotting. Additional weight aesthetic (see aesthetic section below) permits better weighting if desired
 #' 
-#'@section Aesthetics:
+#' @section Aesthetics:
 #' \Sexpr[results=rd,stage=build]{ggtern:::rd_aesthetics("geom", "density_tern")}
-#'@inheritParams ggplot2::geom_point
-#'@inheritParams ggplot2::geom_path
-#'@inheritParams ggplot2:::geom_density2d
-#'@name geom_density_tern
-#'@rdname geom_density_tern
-#'@author Nicholas Hamilton
-#'@examples
+#' @inheritParams ggplot2::geom_point
+#' @inheritParams ggplot2::geom_path
+#' @inheritParams ggplot2:::geom_density2d
+#' @param base the base transformation of the data, options include 'identity' (ie direct on the cartesian space), or 'ilr'
+#' which means to use the isometric log ratio transformation.
+#' @param h Bandwidth (vector of length two) as a multiple of the best estimate, estimated using \code{\link[MASS]{bandwidth.nrd}}. 
+#' @param weight weighting for weighted kde2d esimate, default's to 1, which is non-weighted and equivalent to the usual kde2d calculation
+#' @param expand Calculate on a mesh which extends beyond the grid of the plot region by this amount
+#' If \code{NULL}, estimated using \code{\link[MASS]{bandwidth.nrd}}.
+#' @name geom_density_tern
+#' @rdname geom_density_tern
+#' @author Nicholas Hamilton
+#' @examples
 #' data(Feldspar); Feldspar$weight= 0*c(1:nrow(Feldspar))^2
 #' ggtern(Feldspar,aes(Ab,An,Or,weight=weight)) + 
 #' geom_density_tern(aes(colour=..level..),expand=0.5,base='identity')
-#'@export
+#' @export
 geom_density_tern <- function(mapping = NULL, data = NULL, stat='DensityTern', position='identity',
                               ...,
                               lineend = "butt", linejoin = "round", linemitre = 1,
