@@ -6,6 +6,7 @@
 #' @section Aesthetics: 
 #' \Sexpr[results=rd,stage=build]{ggtern:::rd_aesthetics("geom", "InterpolateTern")}
 #' @inheritParams geom_confidence_tern
+#' @inheritParams geom_density_tern
 #' @inheritParams ggplot2::geom_smooth
 #' @inheritParams ggplot2::geom_point
 #' @inheritParams ggplot2::geom_path
@@ -25,7 +26,7 @@ geom_interpolate_tern <- function( mapping = NULL, data = NULL, stat = "Interpol
                                    ...,
                                    lineend = "butt",linejoin = "round", linemitre = 1,
                                    na.rm = FALSE, show.legend = NA,inherit.aes = TRUE, 
-                                   method='auto', formula=value~poly(x,y,degree=1)) {
+                                   method='auto', formula=value~poly(x,y,degree=1),base='ilr') {
   layer(
     data        = data,
     mapping     = mapping,
@@ -41,6 +42,7 @@ geom_interpolate_tern <- function( mapping = NULL, data = NULL, stat = "Interpol
       na.rm       = na.rm,
       formula     = formula,
       method      = method,
+      base        = base,
       ...
     )
   )
